# RAG-Chatbot-with-Confluence

./: .gitignore  README.md  config.py  pyproject.toml
notebooks/: help_desk.ipynb  list_spaces.py
src/: app.py  confluence_chat.py  confluence_spaces.py  create_confluence_embeddings.py  evaluate.py  get_confluence_spaces.py  help_desk.py  list_spaces.py  load_db.py  main.py  streamlit.py
tests/: test_confluence.py  test_langchain.py
